--- a/mini-project/react_website/public/index.html
+++ b/mini-project/react_website/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ELIZA Chat</title>
+    <title>Morty Travel Bot</title>
   </head>
   <body>
     <noscript>
